== 0.5

	New features:
	-------------
	+ Importing subnets from RIPE by AS in admin section;
	+ Added switch management and changed switch logic;
	+ Added VRF support;
	+ Added AD domain authentication;

	Bugfixes / enhancements:
	------------------------
	+ Added DNS resolving when editing/adding IP address;
	+ Added IE compatibility meta tag;
	+ Search returns also subnets;
	+ jQuery update from 1.6.2 to 1.7;	
	+ Highcharts update from 2.1.2 to 2.1.8;
	
	+ Fixed dashboard errors if no IPv4/IPv6 subnets configured; 
	+ Fixed errors with viewing / modifying IP addresses for Operator users;
	+ Fixed session cookie error on hosts; 
	+ Fixed error when saving settings;
	+ Fixed instructions errors when inserting html code
		

== 0.4

	New features:
	-------------
	+ Massive add / edit / delete by specifying IP range (e.g. 10.10.0.1 - 10.10.0.254);
	+ Database upgrade / install from browser -> simplified installation/update procedure;
	+ New usertype viewer - can only view IP address list;
	+ Subnets can now be edited directly from IP address list;
	+ Option to lock subnet for writing to no-admin users;
	+ Device and Host list;
	+ Option to specify which subnet can have IP requests when editing / adding subnet if module is enabled;
	+ Latest version check on admin page;

	Bugfixes / enhancements:
	------------------------
	+ Fixed overspanning of multiple sections;
	+ Admin menu and add subnet now shown only to admins;
	+ Fixed VLAN table to show nesting and IP request option and statistics;
	+ Fixed subnet table to show nesting and IP request option;
	+ Subnet Adding shows only master subnets in section not in all sections;
	+ Tooltips and button hovers are now in separate javascript file;
	+ Graphs show only subnets with non-0 ip addresses;
	+ Various code enhancements + improved error handling;
	+ Fixed URL links not updating after few clicks;
	+ If loading slave subnet directly the subnet menu drops down and shows active slave subnet; 